# catkin

./: CMakeLists.txt
cmake/: catkinConfig.cmake.in  catkin_package.cmake
cmake/platform/: windows.cmake
cmake/templates/: pkgConfig.cmake.in
cmake/test/: gtest.cmake
cmake/tools/: libraries.cmake
